# embedded

./: LICENSE
microbit/: .gitignore  Cargo.toml  README.md  cspell.json
microbit-ble/: .gitignore  Cargo.toml  Embed.toml  Makefile.toml  README.md  build.rs  cspell.json  memory.x
microbit-ble-protocol/: .gitignore  Cargo.toml
microbit-ble-protocol/src/: lib.rs
microbit-ble-web-demo/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  Trunk.toml  cspell.json  docker-compose.yml  index.html  style.css
microbit-ble-web-demo/src/: context.rs  lib.rs  utils.rs
microbit-ble-web-demo/src/components/: comm_log.rs  connect_buttons.rs  echo_panel.rs  led_matrix.rs  mod.rs  motion_panel.rs  sensor_panel.rs  sound_panel.rs  status_indicator.rs
microbit-ble-web-demo/src/services/: ble.rs  mod.rs
microbit-ble/.cargo/: config.toml
microbit-ble/softdevice/: README.md
microbit-ble/src/: main.rs
microbit-ble/src/ble/: battery.rs  buttons.rs  commands.rs  led_matrix.rs  mod.rs  motion.rs  nus.rs  protocol.rs  sound.rs  touch.rs
microbit-ble/web/: index.html
microbit-ble/web-server/: Cargo.toml
microbit-ble/web-server/src/: main.rs
microbit/examples/: ambient.rs  ble_beacon.rs  buzzer.rs
microbit/src/: main.rs
