[package]
name = "microbit-ble-protocol"
description = "Shared BLE binary protocol for micro:bit firmware and web frontend"
edition = "2024"
version = "0.1.0"

[features]
default = []
# Enable alloc dependency: provides Vec<u8> versions of build_frame/parse_frame, Command enum, to_hex
alloc = []

[dependencies]

[dev-dependencies]
