[package]
authors = ["franciscowu"]
description = "micro:bit V2 BLE Web Demo - Leptos Frontend"
edition = "2024"
license = "MIT"
name = "microbit-ble-web-demo"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
microbit-ble-protocol = { path = "../microbit-ble-protocol", features = ["alloc"] }
# Leptos frontend framework
leptos = { version = "0.8.19", features = ["csr"] }
leptos-use = "0.18.3"
# Web bindings
js-sys = "0.3.99"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"
web-sys = { version = "0.3.99", features = [
  "Bluetooth",
  "BluetoothDevice",
  "BluetoothLeScanFilterInit",
  "BluetoothRemoteGattServer",
  "BluetoothRemoteGattService",
  "BluetoothRemoteGattCharacteristic",
  "RequestDeviceOptions",
  "Window",
  "console",
  "Event",
  "EventTarget",
  "Blob",
  "Url",
] }
# Logging
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.32"
# Utility libraries
gloo-timers = { version = "0.3.0", features = ["futures"] }
base64 = "0.22.1"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.72"

[features]
# For Trunk build
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

# Default to CSR (Client-Side Rendering)
default = ["csr"]

[package.metadata.trunk]
# Trunk configuration
assets = []

[profile.release]
codegen-units = 1 
lto = true 
opt-level = "z" # Minimize WASM size
panic = "abort" 
strip = true
