[package]
edition = "2024"
name = "microbit-ble"
version = "0.1.0"

[dependencies]
# Embassy 异步运行时
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-executor-timer-queue = "0.1.0"
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.10.0", features = ["nrf52833", "time-driver-rtc1", "gpiote"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.1", features = ["tick-hz-32_768"] }

# nRF SoftDevice 蓝牙协议栈
nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server", "s113", "nrf52833", "critical-section-impl"] }
nrf-softdevice-s113 = "0.1.2"

# Cortex-M 基础
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

# 日志和调试
defmt = "1.1.0"
defmt-rtt = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# 嵌入式工具
fixed = "1.31.0"
static_cell = "2.1.1"

[profile.release]
codegen-units = 1
debug = true
lto = false
opt-level = "s"
panic = "abort"

[profile.dev]
debug = true
opt-level = 1
panic = "abort"

[[bin]]
bench = false
name = "microbit-ble"
test = false
