[package]
edition = "2024"
name = "microbit"
version = "0.1.0"

[[bin]]
bench = false
name = "microbit"
test = false

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
critical-section-lock-mut = "0.1.2"
embedded-hal = "1.0.0"
heapless = "0.9.3"
mb2-wukong-expansion = {path = "vendor/mb2-wukong-expansion"}
microbit-v2 = "0.16.0"
nrf52833-pac = {version = "0.12.2", features = ["cortex-m-rt"]}
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"
tiny-led-matrix = "1.0.2"

[patch.crates-io]
ws2812-nrf52833-pwm = {path = "vendor/ws2812-nrf52833-pwm"}
